=== master

* Avoid creating backtraces for flow-control exceptions in connection_expiration and connection_validator extensions (jeremyevans)

* Support tzinfo 2 in addition to tzinfo 1 in the named_timezones extension (jeremyevans) (#1596)

=== 5.17.0 (2019-02-01)

* Support skip_auto_validations instance method in auto_validations plugin (oldgreen, jeremyevans) (#1592)

* Support :preconnect_extensions Database option for loading extensions before :preconnect option (jeremyevans)

* Avoid usage of Proc.new with implicit block as ruby 2.7+ deprecates this behavior (jeremyevans)

* Allow Sequel[].as to be used for constructing aliases with eager_graph (e.g. Model.eager_graph(Sequel[:a].as(:b))) (jeremyevans) (#1588)

=== 5.16.0 (2019-01-02)

* Convert integer columns to bigint columns when copying SQLite databases to other databases using bin/sequel -C (jeremyevans) (#1584)

* Use nicer error messages for missing or empty migration directories (Lavode) (#1585)

* Make alter table emulation work correctly in SQLite 3.26.0+ (jeremyevans) (#1582)

* Do not unset new one_to_one associated objects' reciprocal associations before saving associated objects in the nested_attributes plugin (jeremyevans)

* Do not validate new one_to_one associated objects twice when saving in the nested_attributes plugin (jeremyevans)

* Fix :qualify_tables option to class_table_inheritance plugin to work correctly with subclasses of subclasses (benalavi) (#1581)

* Make class_table_inheritance plugin use the schema cache instead of sending a query to get columns for tables (kenaniah) (#1580)

* Remove loading of mysqlplus in the mysql adapter (jeremyevans)

* Make mysql adapter work correctly on ruby 2.6+ (jeremyevans)

* Add Database#rollback_on_exit to rollback transactions instead of committing them when exiting the transaction block (jeremyevans)

* Enable window functions in SQLite 3.26.0+ (jeremyevans)
