@@ -60,3 +60,4 @@ end
 if ENV['SEQUEL_NO_CACHE_ASSOCIATIONS']
   Sequel::Model.cache_associations = false
 end
+Sequel::Model.plugin :throw_failures if ENV['SEQUEL_MODEL_THROW_FAILURES']
